cabal-version:   3.4
name:            coexp
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
maintainer:      git@vikraman.org
author:          Vikraman Choudhury
homepage:        https://github.com/vikraman/coexp
synopsis:        Continuations and Co-exponentials
category:        Control
build-type:      Simple
extra-doc-files: CHANGELOG.md

common common-deps
  default-language: GHC2021
  build-depends:
    base >=4.16 && <5,
    mtl ^>=2.3
  ghc-options:
    -Wall
    -Wextra
    -O2
  other-modules:
    Paths_coexp

library
    import:           common-deps
    exposed-modules:
        Control.Arrow.Coapply
        Control.Monad.Coexp
        Control.Monad.Control
        Control.Monad.Free.Control
        Data.Coexp
        Data.Coexp.Backtrack
        Data.Functor.Strong
        Data.Profunctor.Coclosed
        Examples.Eff.Toss
        Examples.SAT.Backtrack
        Examples.SAT.Guess
        Examples.SAT.Prop
    hs-source-dirs:   src
    build-depends:
        bifunctors ^>=5.6,
        containers ^>=0.6,
        free ^>=5.2,
        profunctors ^>=5.6,
        tasty-quickcheck ^>=0.10,

executable coexp
    import:           common-deps
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:
        coexp

test-suite coexp-test
    import:           common-deps
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    build-depends:
        coexp,
        tasty ^>=1.4,
        tasty-hunit ^>=0.10,
        tasty-quickcheck ^>=0.10,
